ajout images + main.js + json

--- a/index5.html
+++ b/index5.html
@@ -17,6 +17,7 @@
  <div class="jumbotron jumbotron-fluid bg-success">
         <div class="container">
             <h1 class="display-1 text-center">Médiathèque Test - Espace Jeux</h1>
+           <img src="img/guitar-2276181_1280.jpg" class="img-fluid" alt="guitare">     
         </div>
     </div>
     
