--- a/index2.html
+++ b/index2.html
@@ -17,6 +17,7 @@
  <div class="jumbotron jumbotron-fluid bg-success">
         <div class="container">
             <h1 class="display-1 text-center">Médiathèque Test - Espace Lecture</h1>
+            <img src="img/book-863418_1280.jpg" class="img-fluid" alt="livre ouvert sur la nature">
         </div>
     </div>
     
