--- a/index3.html
+++ b/index3.html
@@ -17,6 +17,7 @@
  <div class="jumbotron jumbotron-fluid bg-success">
         <div class="container">
             <h1 class="display-1 text-center">Médiathèque Test - Espace Visu</h1>
+           <img src="img/fantasy-2824304_1280.jpg" class="img-fluid" alt="yeux nature"> 
         </div>
     </div>
     
