--- a/index4.html
+++ b/index4.html
@@ -17,6 +17,7 @@
  <div class="jumbotron jumbotron-fluid bg-success">
         <div class="container">
             <h1 class="display-1 text-center">Médiathèque Test - Espace Ecoute</h1>
+           <img src="img/sculpture-2275202_1280.jpg" class="img-fluid" alt="statue qui écoute"> 
         </div>
     </div>
     
