Ajout api? ah ben non en fait! + à défaut ajout lien catalogue

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div class="container-fluid">
         <div class="row" >
             <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-2 m-5">
-                <a href="#"><p class="font-weight-bold text-center lead text-white bg-primary">Catalogues</p></a>
+                <a href="https://books.google.fr/books?id=mDpEAAAAcAAJ&printsec=frontcover&hl=fr#v=onepage&q&f=false" target="_blank"><p class="font-weight-bold text-center lead text-white bg-primary">Catalogues</p></a>
                 <img class="img-fluid" src="img/philatelist-1844080_640.jpg" alt="Image livre et loupe pour une recherche">
             </div>
 
@@ -99,7 +99,12 @@
     
 </footer>
 
-</body>
 
+<script src="node_modules/jquery/dist/jquery.js"></script>
+<script type="text/javascript" src="main.js"></script>
+<script src="https://apis.google.com/js/api.js"></script>
+
+
+</body>
 
 </html>
